--- a/views/contacto.html
+++ b/views/contacto.html
@@ -6,8 +6,25 @@
     <title>Proyecto Integrador - Contacto</title>
   </head>
   <body>
-    <h1>Proyecto Integrador - Contacto</h1>
+    <header class="main-header">
+      <input type="checkbox" id="menu">
 
-
+      <nav class="nav-bar">
+        <ul class="nav-bar__nav-list">
+          <li class="nav-bar__nav-item">
+            <a href="#" class="nav-bar__nav-link">Inicio</a>
+          </li>
+          <li class="nav-bar__nav-item">
+            <a href="#" class="nav-bar__nav-link">Alta</a>
+          </li>
+          <li class="nav-bar__nav-item">
+            <a href="#" class="nav-bar__nav-link">Nosotros</a>
+          </li>
+          <li class="nav-bar__nav-item">
+            <a href="#" class="nav-bar__nav-link">Contacto</a>
+          </li>
+        </ul>
+      </nav> <!-- .nav-bar -->
+      <script type="module" src="/main.js"></script>
   </body>
 </html>
