--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,9 @@
 @import "base/typography";
 @import "base/resets";
 @import "components/cards";
+@import "components/section-cards";
 @import "layout/header";
+@import "layout/footer";
 @import "pages/index";
 
 
