--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -1,5 +1,5 @@
 .section-cards {
-    background-color: #f1f2f3;
+    background-color: #f1efef;
     padding: 1rem;
 }
 
@@ -9,3 +9,4 @@
     justify-content: center;
     gap: 1rem;
 }
+
