--- a/sass/components/_section-cards.scss
+++ b/sass/components/_section-cards.scss
@@ -4,6 +4,9 @@
     &__header-h1{
         text-align: center;    
     }
+    &__header-h2{
+        text-align: center;    
+    }
 
     &__header-p {
         text-align: center;  
