--- a/sass/components/_section-cards.scss
+++ b/sass/components/_section-cards.scss
@@ -2,7 +2,8 @@
     background-color: orange;
 
     &__header-h1{
-        text-align: center;    
+        text-align: center;  
+        font-size: 2rem ;  
     }
     &__header-h2{
         text-align: center;    
@@ -10,6 +11,7 @@
 
     &__header-p {
         text-align: center;  
+        font-size: 1.5rem; 
         padding-bottom: 1rem;
     }
 
