--- a/sass/components/_section-cards.scss
+++ b/sass/components/_section-cards.scss
@@ -3,10 +3,18 @@
 
     &__header-h1{
         text-align: center;  
-        font-size: 2rem ;  
+        font-size: 2rem;  
+        padding-top: 1.5rem;
     }
+
     &__header-h2{
-        text-align: center;    
+        display: flex;
+        justify-content: center;
+        text-align: center; 
+        font-size: 2rem;  
+        font-weight: 100;
+        padding-top: 2rem;
+        padding-bottom: 1rem;
     }
 
     &__header-p {
