--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,7 @@
 @import "base/resets";
 @import "components/cards";
 @import "components/section-cards";
+@import "components/separador";
 @import "layout/header";
 @import "layout/footer";
 @import "pages/index";
