Pagina de NOSOTROS terminada

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,9 @@
 @import "components/cards";
 @import "components/section-cards";
 @import "components/separador";
+@import "components/hero";
+@import "components/about-us";
+@import "components/services";
 @import "layout/header";
 @import "layout/footer";
 @import "pages/index";
