--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -46,74 +46,86 @@
         </div>
       </div> <!-- .search-bar -->
 
-</header> <!-- main-header -->
+    </header> <!-- main-header -->
 
-<main>
-  <h1>ASDASDAS</h1>
-  <H2>ASDASDSA</H2>
+    <main class=".main">
+      <section class="hero">
+        <h1 class="hero__h1">Todo PROYECTO <br> comienza con <br> una IDEA</h1>
+      </section>
+      <div class="about-us"> 
+        <div class="about-us__container">
+          <div class="about-us__text-container">
+            <h2 class="about-us__h2"> SOBRE NOSOTROS</h2>
+            <p class="about-us__p">
+              Construnort es una empresa dinámica, conformada por un equipo altamente capacitado que brinda un marco profesional y de seriedad a la gestión tradicional de materiales para la construcción.
+              El abastecimiento de materiales para la construcción es una pieza clave en el proceso de una obra.
+              Es por esto que Construnort desarrolla relaciones de asociación con sus clientes para el abastecimiento de todos los materiales e insumos de la obra garantizando la mejor ecuación.
+            </p>
+            <p class="about-us__p">
+              Nuestra misión es brindar valor a nuestros clientes a través de la prestación de servicios de Construcción y Logística de Suministros, satisfaciendo las necesidades de nuestros clientes antes, durante y después de finalizado el proyecto; dando cumplimiento a los estándares de calidad, costos y plazos fijados, respetando la legislación laboral, técnica, medioambiental y social.
+              Trabajamos con empresas de larga trayectoria en el mercado, reconocidas por mantener y preservar la más alta calidad en sus productos.
+            </p>
+          </div>
+        </div>
+      </div>  <!-- about-us -->
+
+        <div class="services">
+          <div class="services__icons"><i class="fa-solid fa-ranking-star"></i></div>
+          <div class="services__icons"><i class="fa-regular fa-clock"></i></div>
+          <div class="services__icons"><i class="fa-solid fa-users"></i></div>
+          <div class="services__icons"><i class="fa-solid fa-truck"></i></div>
+        </div>
+
+        <div class="description">
+          <p class="description__p">CALIDAD <br> GARANTIZADA</p>
+          <p class="description__p">CUMPLIMIENTO <br> DE PLAZOS</p>
+          <p class="description__p">ASESORAMIENTO <br> GENERAL</p>
+          <p class="description__p">ENTREGA <br> PERSONALIZADA</p>
+        </div>
+    </main>
 
 
 
+      <footer class="footer">    <!-- FOOTER -->
+        <div class="footer__container">
+          <h4 class="footer__h4">COMPAÑÍA</h4>
+            <div class="footer__ul">
+              <li>Nosotros</li>
+              <li>Nuestros servicios</li>
+              <li>Política de privacidad</li>
+              <li>Asociate</li>
+            </div>  
+        </div>
+        <div class="footer__container">
+          <h4 class="footer__h4">AYUDA</h4>
+            <div class="footer__ul">
+              <li>Preguntas</li>
+              <li>Compras</li>
+              <li>Envios</li>
+              <li>Estatus de orden</li>
+              <li>Pago</li>
+            </div>  
+        </div>
+        <div class="footer__container">
+          <h4 class="footer__h4">TIENDA</h4>
+            <div class="footer__ul">
+              <li>Herramientas de mano</li>
+              <li>Pintura</li>
+              <li>Revestimientos</li>
+              <li>Iluminación</li>
+            </div>  
+        </div>
+        <div class="footer__container">
+          <h4 class="footer__h4">SEGUINOS</h4>
+          <div class="footer__social-link">
+            <a href="https://es-la.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://x.com/?lang=es" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.linkedin.com/feed/" target="_blank"><i class="fab fa-linkedin"></i></a>
+          </div>
 
-
-
-
-
-
-
-
-</main>
-
-
-
-
-
-
-
-
-
-
-
-<footer class="footer">    <!-- FOOTER -->
-  <div class="footer__container">
-    <h4 class="footer__h4">COMPAÑÍA</h4>
-      <div class="footer__ul">
-        <li>Nosotros</li>
-        <li>Nuestros servicios</li>
-        <li>Política de privacidad</li>
-        <li>Asociate</li>
-      </div>  
-  </div>
-  <div class="footer__container">
-    <h4 class="footer__h4">AYUDA</h4>
-      <div class="footer__ul">
-        <li>Preguntas</li>
-        <li>Compras</li>
-        <li>Envios</li>
-        <li>Estatus de orden</li>
-        <li>Pago</li>
-      </div>  
-  </div>
-  <div class="footer__container">
-    <h4 class="footer__h4">TIENDA</h4>
-      <div class="footer__ul">
-        <li>Herramientas de mano</li>
-        <li>Pintura</li>
-        <li>Revestimientos</li>
-        <li>Iluminación</li>
-      </div>  
-  </div>
-  <div class="footer__container">
-    <h4 class="footer__h4">SEGUINOS</h4>
-     <div class="footer__social-link">
-      <a href="https://es-la.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
-      <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
-      <a href="https://x.com/?lang=es" target="_blank"><i class="fab fa-twitter"></i></a>
-      <a href="https://www.linkedin.com/feed/" target="_blank"><i class="fab fa-linkedin"></i></a>
-     </div>
-
-  </div>
-</footer>    <!-- FOOTER -->
+        </div>
+      </footer>    <!-- FOOTER -->
 
     <script type="module" src="/main.js"></script>
   </body>
