html de Form + profile photos

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,8 @@
 @import "components/hero";
 @import "components/about-us";
 @import "components/services";
+@import "components/form";
+@import "components/opinions";
 @import "layout/header";
 @import "layout/footer";
 @import "pages/index";
