--- a/views/contacto.html
+++ b/views/contacto.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <title>Proyecto Integrador - Contacto</title>
   </head>
   <body>
@@ -12,19 +13,179 @@
       <nav class="nav-bar">
         <ul class="nav-bar__nav-list">
           <li class="nav-bar__nav-item">
-            <a href="#" class="nav-bar__nav-link">Inicio</a>
+            <a href="../index.html" class="nav-bar__nav-link">INICIO</a>
           </li>
           <li class="nav-bar__nav-item">
-            <a href="#" class="nav-bar__nav-link">Alta</a>
+            <a href="#" class="nav-bar__nav-link">ALTA</a>
           </li>
           <li class="nav-bar__nav-item">
-            <a href="#" class="nav-bar__nav-link">Nosotros</a>
+            <a href="/views/nosotros.html" target="_self" class="nav-bar__nav-link">NOSOTROS</a>
           </li>
           <li class="nav-bar__nav-item">
-            <a href="#" class="nav-bar__nav-link">Contacto</a>
+            <a href="/views/contacto.html" class="nav-bar__nav-link">CONTACTO</a> <!--! ACA LE PUSE EL LINK DE CONTACTO PARA VER LA PAG -->
           </li>
         </ul>
       </nav> <!-- .nav-bar -->
+
+      <div class="search-bar">
+        <div class="search-bar__logo-container">
+          <img src="/public/img/CONSTRUNORT-01.svg" alt="">
+        </div>
+        <form action="#" class="search-bar__form-container">
+          <!-- <label for="busqueda" class="search-bar__form-label">Buscar</label> -->
+          <input type="search" class="search-bar__form-search" id="busqueda" placeholder="Buscar productos y más...">  
+            <input type="submit" class="search-bar__form-submit" value="BUSCAR">                                          
+        </form>
+        <div class="search-bar__carrito-container"><i class="fa-solid fa-cart-shopping fa-lg"></i></div>
+        <div class="menu-toogle">
+          <label for="menu" class="menu-toogle__label">
+            <span class="menu-toogle__top-bread"></span>
+            <span class="menu-toogle__meat"></span>
+            <span class="menu-toogle__bottom-bread"></span>
+          </label>
+        </div>
+      </div> <!-- .search-bar -->
+
+    </header> <!-- main-header -->
+
+    <main>
+      <h1 class="cabecera">CONTACTANOS!</h1>
+        <div class="container-gral">
+          <div class="form">
+            <form class="form__form">
+              <fieldset class="form__fieldset">
+                <legend class="form__legend">Escribinos</legend>
+
+                <div class="form__container-input">
+                  <label for="lbl-nombre" class="form__label">Nombre: </label>
+                  <input type="text" id="lbl-nombre" name="nombre" placeholder="Juan" class="form__input">
+                  
+                  <label for="lbl-apellido" class="form__label">Apellido: </label>
+                  <input type="text" id="lbl-apellido" name="apellido" placeholder="Pérez" class="form__input">
+                </div>
+                  
+                <div class="form__container-input">
+                  <label for="lbl-telefono" class="form__label">Teléfono: </label>
+                  <input type="text" id="lbl-telefono" name="telefono" placeholder="1122334455" class="form__input">
+                  
+                  <label for="lbl-email" class="form__label">Email: </label>
+                  <input type="email" id="lbl-email" name="email" placeholder="construnort@gmail.com" class="form__input">
+                </div>
+                  
+                <div class="form__container-input">
+                  <textarea name="info" cols="30" rows="20" placeholder="Escriba aquí su consulta"></textarea>
+
+                </div>
+                
+              </fieldset>
+              
+              <button>Enviar</button>
+              
+              
+            </form>
+          </div>  <!-- FORM -->
+
+
+          <section class="opinions">Opiniones    <!-- COMIENZA OPINIONES -->
+            <div>
+              <span class="opinions__span">Comentarios</span>
+              <h2 class="opinions__h2">Clientes dicen...</h2>
+            </div>
+            <div class="opinions__box-container">
+              <div class="opinions__box">
+                <div  class="opinions__box-top">
+                  <div class="opinions__profile">
+                    <div class="opinions__profile-img">
+                      <img src="#" alt="">
+                    </div>
+                    <div class="opinions__name.user_strong">
+                      <strong class="opinions__name.user_strong">Juancito Perez</strong>
+                      <span class="opinions__span">@juancitoperez2</span>
+                    </div>
+                  </div>
+                  <div class="reviews"></div>
+                </div>
+
+              </div>
+
+            </div>
+
+
+          </section>
+
+
+
+
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </main>
+
+    <footer class="footer">    <!-- FOOTER -->
+      <div class="footer__container">
+        <h4 class="footer__h4">COMPAÑÍA</h4>
+          <div class="footer__ul">
+            <li>Nosotros</li>
+            <li>Nuestros servicios</li>
+            <li>Política de privacidad</li>
+            <li>Asociate</li>
+          </div>  
+      </div>
+      <div class="footer__container">
+        <h4 class="footer__h4">AYUDA</h4>
+          <div class="footer__ul">
+            <li>Preguntas</li>
+            <li>Compras</li>
+            <li>Envios</li>
+            <li>Estatus de orden</li>
+            <li>Pago</li>
+          </div>  
+      </div>
+      <div class="footer__container">
+        <h4 class="footer__h4">TIENDA</h4>
+          <div class="footer__ul">
+            <li>Herramientas de mano</li>
+            <li>Pintura</li>
+            <li>Revestimientos</li>
+            <li>Iluminación</li>
+          </div>  
+      </div>
+      <div class="footer__container">
+        <h4 class="footer__h4">SEGUINOS</h4>
+        <div class="footer__social-link">
+          <a href="https://es-la.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="https://x.com/?lang=es" target="_blank"><i class="fab fa-twitter"></i></a>
+          <a href="https://www.linkedin.com/feed/" target="_blank"><i class="fab fa-linkedin"></i></a>
+        </div>
+
+      </div>
+    </footer>    <!-- FOOTER -->
+
       <script type="module" src="/main.js"></script>
   </body>
 </html>
