--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import "components/services";
 @import "components/form";
 @import "components/opinions";
+@import "components/location";
 @import "layout/header";
 @import "layout/footer";
 @import "pages/index";
