--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,25 +1,159 @@
+.cabecera {
+    color: red;
+    text-align: center;
+    font-size: 4rem;
+    font-weight: 900;
+    font-style: italic;
+    background-color: #F1EFEF;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    letter-spacing: 2px;
+    /* text-transform: uppercase; */
+}
+
 .container-gral{
     display: flex;
+    flex-direction: column;
+    height: 1000px;
+
+    @media (min-width:576px) {
+    display: flex;
+    flex-direction: row;
+    height: 600px;
+    background-color: #F1EFEF;
+
+    }
+    
 }
 
 .form {
-    width: 50%;
-    height: 50vh;
-    background-color: rgb(137, 137, 139);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 60vh;
+    background-color: #F1EFEF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2px;
 
+
+    &__form {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        max-width: 800px;
+        width: 80%;
+        height: 100%;
+        background-color: #f1e8e8be;
+        padding: 2px 15px;
+        border: 1px solid grey;
+        border-radius: 5px;
+    }
+
+    &__legend {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 1.8rem;
+        font-weight: 800;
+        padding-bottom: .2rem;
+    }
+
+    &__container-input {
+        display: flex;
+        flex-direction: column;
+        width: 80%;
+        padding: 0.5rem;
+
+    }
+
+    &__label {
+        font-size: 1rem;
+        font-weight: 500;
+        /* padding: 5px 0px 2px; */
+    }
 
     &__input {
-  /*       display: block; */
+        font-size: 1rem;
+        font-weight: 500;
+        padding-left: 5px;
     }
 
 
+
+    @media (min-width: 576px) {
+        .form {
+            width: 60%;
+            height: 50vh;
+            background-color: #F1EFEF;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 2px;
+        
+        
+            &__form {
+                display: flex;
+                flex-direction: column;
+                justify-content: flex-end;
+                align-items: center;
+                max-width: 800px;
+                width: 80%;
+                height: 90%;
+                background-color: #f1e8e8be;
+                padding: 10px 25px;
+                border: 1px solid grey;
+                border-radius: 5px;
+            }
+        
+            &__legend {
+                display: flex;
+                justify-content: center;
+                font-size: 1.8rem;
+                font-weight: 800;
+            }
+        
+            &__container-input {
+                display: flex;
+                justify-content: space-evenly;
+                padding: 0.5rem;
+        
+            }
+        
+            &__label {
+                font-size: 1.2rem;
+                font-weight: 500;
+                /* padding: 5px 0px 2px; */
+            }
+        
+            &__input {
+                font-size: 1rem;
+                font-weight: 500;
+                padding-left: 5px;
+            }
+    }
 }
 
 
 
 
 .opinions {
-    width: 50%;
-    height: 50vh;
-    background-color: rgb(95, 95, 180);
+    width: 40%;
+/*     height: 50vh;
+    background-color: rgb(95, 95, 180); */
+}
+
+
+
+.button {
+    font-size: 1rem;
+    font-weight: 600;
+    background-color: #f1e8e8be;
+    height: 100px;
+    width: 72%;
+    margin: 10px 0;
+}
 }
