--- a/sass/components/_opinions.scss
+++ b/sass/components/_opinions.scss
@@ -1,35 +1,124 @@
 .opinions {
+    background-color: #F1EFEF;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     letter-spacing: 1px;
- /*    margin: 30px 0px; */
-    padding: 10px 20px;
+    padding: 30px 20px;
+    width: 100%; 
+    height: 600px;
+
+    @media (min-width: 576px) {
+        background-color: #F1EFEF;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        letter-spacing: 1px;
+        padding: 10px 20px;
+        width: 50%; 
+
+    }
 
 
     &__span {
         font-size: 1.3rem;
-        color: #252525;
+        color: #F42534;
         margin-bottom: 10px;
         letter-spacing: 2px;
         text-transform: uppercase;
-
     }
 
 
-    &__h2 {
-        font-size: 2.2rem;
-        font-weight: 500;
-        background-color: #fff;
-        color: aqua;
-        padding: 10px 20px;
+    
+    &__box-container {
+       /*  background-color: pink; */
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        width: 100%;
+    }
 
+    &__box {
+        background-color: #f1e8e8be;
+        height: 160px;
+        width:80%;
+        box-shadow: 2px 2px 30px rgba(0,0,0,0.1);
+        padding: 20px;
+        margin: 15px;
+        margin-bottom: 20px;
+        cursor: pointer;
+        border: 1px solid grey;
+        border-radius: 30px;
+
+
+        @media (min-width: 576px) {
+            background-color: #f1e8e8be;
+            height: 160px;
+            width:800px;
+            box-shadow: 2px 2px 30px rgba(0,0,0,0.1);
+            padding: 20px;
+            margin: 15px;
+            cursor: pointer;
+            border: 1px solid grey;
+            border-radius: 30px;
+        }
 
     }
 
+    &__profile-img {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        overflow: hidden;
+        margin-right: 10px;
+    }
 
+    &__profile-img_img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+    }
 
+    &__profile {
+        display: flex;
+        align-items: center;
+    }
 
+    &__name-user {
+        display: flex;
+        flex-direction: column;
+    }
+
+    &__name-user_strong {
+        color: #3d3d3d;
+        font-size: 1.1rem;
+        letter-spacing: 0.5px;
+    }
+
+    &__name-user_span {
+        color: #6e6c6c;
+        font-size: 0.8rem;
+    }
+
+    &__reviews {
+        color: #f9d71c;
+    }
+
+    &__box-top {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 20px;
+    }
+
+    &__comments_p {
+        font-size: 0.9rem;
+        color: #4b4b4b;
+    }
 
 }
